--- a/v2rayN/v2rayN/packages.config
+++ b/v2rayN/v2rayN/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Google.Protobuf" version="3.10.1" targetFramework="net46" />
+  <package id="Google.Protobuf.Tools" version="3.10.1" targetFramework="net46" />
   <package id="Grpc.Tools" version="2.24.0" targetFramework="net46" developmentDependency="true" />
 </packages>
